<resources>
    <string name="app_name">MISDesign</string>
    <string name="main_heading_login">Log into Your Account</string>
    <string name="main_heading_register">Register</string>
    <string name="student_email_address_heading">Student Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password_heading">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_button">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="registerhere"> Register here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginhere"> Login here</string>
    <string name="registerbtn"> Register</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="OR">OR</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="enter_student_email">Enter student email</string>
    <string name="enter_phone">Enter phone no.</string>
    <string name="Branch">Branch</string>
    <string name="select_current_year">Select current year</string>
    <string name="select_graduation_year">Select graduation year</string>
    <string name="welcome">Welcome</string>
    <string name="nameofstudent">Name of student</string>
    <string name="studentid">Student ID</string>
    <string name="typeofproject">Type of project</string>
    <string name="addteam">Add teammates</string>
    <string name="addlink">Add links/documents</string>
    <string name="addprojtit">Add project title</string>
    <string name="addprojddesc">Add project description</string>
    <string name="prjctstat">Project process status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">home\n</string>
    <string name="second_fragment_label">login\n</string>
    <string name="action_settings">settings\n</string>
    <string name="third_fragment_label">register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="addproject">Add Project\n</string>

    <string name="main_heading_addproject">Add Project</string>
    <string name="enter_student_name1">Name of student\n</string>
    <string name="student_id">Student ID</string>
    <string name="projectprogress_status">Project progress status</string>
    <string name="Addteammates">Add teammates</string>
    <string name="addlinks">Add links/documents\n</string>
    <string name="addprojecttitle">Add project title</string>
    <string name="addprojectdescription">Add project description</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="lbl_no_data_found">No data found!</string>
    <string name="msg_get_start_by_ex">Get start by Explore TL</string>
    <string name="newproject">New Project</string>
    <string name="lbl_name_of_equipment">Name of Equipment</string>
    <string name="msg_availability_1">Availability: 12/15</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="lbl_issuable">Issuable</string>
    <string name="action_projects">projects\n</string>
    <string name="records">records</string>
    <string name="projects">projects</string>
    <string name="lbl_drone">Drone\n</string>
    <string name="msg_type_club_proj">Type: Club project</string>
    <string name="msg_we_are_making_a">We are making an ai based drone, include   </string>

</resources>