<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.mis1.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.mis1.loginFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.example.mis1.registerFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>