<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:id="@+id/linearRowdrone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:baselineAligned="false">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumndrone"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="0.66" android:layout_width="0dp" android:orientation="vertical">
            <TextView
                android:ellipsize="end" android:id="@+id/txtDrone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"

                android:text="@string/lbl_drone"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTypeClubProj"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_type_club_proj"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowteammates"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTeammates"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/addteam"/>
                <FrameLayout android:id="@+id/frameTeamamtes"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_5pxh" android:layout_width="@dimen/_50pxh">
                    <ImageView android:id="@+id/imageEllipse450"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="centerCrop"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse450"/>
                    <ImageView android:id="@+id/imageEllipse451"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="centerCrop"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse451"/>
                    <ImageView android:id="@+id/imageEllipse452"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="centerCrop"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse452"/>
                    <ImageView android:id="@+id/imageEllipse453"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="centerCrop"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse453"/>
                </FrameLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                tools:text="Description"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                 android:text="@string/msg_we_are_making_a"
        </LinearLayout>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumnellipse448"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_weight="0.34" android:layout_width="0dp" android:orientation="vertical">
            <ImageView android:id="@+id/imageEllipse448"
                android:layout_gravity="start"
                android:layout_height="@dimen/_120pxh"
                android:layout_width="@dimen/_120pxh"

                tools:ignore="ContentDescription" android:src="@drawable/img_ellipse448"/>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowellipse449"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" >
                <View
                    android:background="@drawable/rectangle_bg_green_800_radius_1_5"
                    android:id="@+id/viewEllipse449"
                    android:layout_height="@dimen/_3pxh"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_3pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCompleted"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.96"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="Completed"  />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
